Replace plugin from 'tmux' to 'tmux-dracula' - Replace plugin from 'tmux' (dracular theme) to 'tmux-dracula' (forked dracular theme by Junhong). - 'tmux-dracula' has improved features for location and weather. - Now, location is showing much closer location to user. - Weather is showing UNICODE symbol, Temp., RH, wind speed, precipitation, and moom phase.

--- a/tmux.conf
+++ b/tmux.conf
@@ -29,7 +29,8 @@ bind-key -n C-S-Right swap-window -t +1
 # Plugin ------------------------------------------------------------------------
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'dracula/tmux'
+#set -g @plugin 'dracula/tmux'
+set -g @plugin 'junhonglee89/tmux-dracula'
 
 # Dracular theme configuration --------------------------------------------------
 set -g @dracula-show-fahrenheit false
