Add bindkey for split and change base index for panes and windows - Add bindkey for split <C-h>: horizontal split, <C-v>: vertical split. - Change base index for panes and windows from 0 to 1.

--- a/tmux.conf
+++ b/tmux.conf
@@ -15,6 +15,10 @@ set -g mouse on
 
 set -g default-terminal "screen-256color"
 
+# Set the base index for panes, windows to 1 instead of 0
+set -g pane-base-index 1
+set -g base-index 1
+
 # Pane navigation
 bind-key -r k select-pane -U
 bind-key -r j select-pane -D
@@ -25,6 +29,9 @@ bind-key -r l select-pane -R
 bind-key -r C-s source-file ~/.tmux.conf \; display "Reloaded!"
 bind-key -n C-S-Left swap-window -t -1
 bind-key -n C-S-Right swap-window -t +1
+unbind C-n
+bind C-h split-window -h
+bind C-v split-window -v
 
 # Plugin ------------------------------------------------------------------------
 set -g @plugin 'tmux-plugins/tpm'
