Add unbind for new keybinding for split

--- a/tmux.conf
+++ b/tmux.conf
@@ -30,6 +30,8 @@ bind-key -r C-s source-file ~/.tmux.conf \; display "Reloaded!"
 bind-key -n C-S-Left swap-window -t -1
 bind-key -n C-S-Right swap-window -t +1
 unbind C-n
+unbind C-h
+unbind C-v
 bind C-h split-window -h
 bind C-v split-window -v
 
