Adjust mouse wheel speed

--- a/tmux.conf
+++ b/tmux.conf
@@ -34,6 +34,11 @@ unbind C-h
 unbind C-v
 bind C-h split-window -h
 bind C-v split-window -v
+# Adjust mouse wheel speed
+bind -Tcopy-mode WheelUpPane send -N1 -X scroll-up
+bind -Tcopy-mode WheelDownPane send -N1 -X scroll-down
+bind-key -T copy-mode-vi WheelUpPane send -N1 -X scroll-up
+bind-key -T copy-mode-vi WheelDownPane send -N1 -X scroll-down
 
 # Plugin ------------------------------------------------------------------------
 set -g @plugin 'tmux-plugins/tpm'
