Add plugin to save session - Add plugin to save session. - Re-locate plugins call.

--- a/tmux.conf
+++ b/tmux.conf
@@ -19,13 +19,15 @@ set -g default-terminal "screen-256color"
 set -g pane-base-index 1
 set -g base-index 1
 
-# Pane navigation
-bind-key -r k select-pane -U
-bind-key -r j select-pane -D
-bind-key -r h select-pane -L
-bind-key -r l select-pane -R
+# Plugin ------------------------------------------------------------------------
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+#set -g @plugin 'dracula/tmux'
+set -g @plugin 'junhonglee89/tmux-dracula'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
 
 # key binding -------------------------------------------------------------------
+unbind C-s
 bind-key -r C-s source-file ~/.tmux.conf \; display "Reloaded!"
 bind-key -n C-S-Left swap-window -t -1
 bind-key -n C-S-Right swap-window -t +1
@@ -34,17 +36,16 @@ unbind C-h
 unbind C-v
 bind C-h split-window -h
 bind C-v split-window -v
+# Pane navigation
+bind-key -r k select-pane -U
+bind-key -r j select-pane -D
+bind-key -r h select-pane -L
+bind-key -r l select-pane -R
 # Adjust mouse wheel speed
 bind -Tcopy-mode WheelUpPane send -N1 -X scroll-up
 bind -Tcopy-mode WheelDownPane send -N1 -X scroll-down
 bind-key -T copy-mode-vi WheelUpPane send -N1 -X scroll-up
 bind-key -T copy-mode-vi WheelDownPane send -N1 -X scroll-down
-
-# Plugin ------------------------------------------------------------------------
-set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-sensible'
-#set -g @plugin 'dracula/tmux'
-set -g @plugin 'junhonglee89/tmux-dracula'
 
 # Dracular theme configuration --------------------------------------------------
 set -g @dracula-show-fahrenheit false
@@ -54,6 +55,9 @@ set -g @dracula-show-flags true
 set -g @dracula-military-time true
 set -g @dracula-cpu-usage true
 set -g @dracula-day-month true
+
+# resurrect configuration -------------------------------------------------------
+set -g @resurrect-save 'C-b'
 
 # Below should be last !!!
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
