--- a/tmux.conf
+++ b/tmux.conf
@@ -48,12 +48,13 @@ bind-key -T copy-mode-vi WheelUpPane send -N1 -X scroll-up
 bind-key -T copy-mode-vi WheelDownPane send -N1 -X scroll-down
 
 # Dracular theme configuration --------------------------------------------------
+set -g @dracula-show-network false
 set -g @dracula-show-fahrenheit false
 set -g @dracula-show-location false
 set -g @dracula-border-contrast true 
 set -g @dracula-show-flags true
 set -g @dracula-military-time true
-set -g @dracula-cpu-usage true
+set -g @dracula-cpu-usage false
 set -g @dracula-day-month true
 
 # resurrect configuration -------------------------------------------------------
