tmux: Add word separators and set dracula back to original.

--- a/tmux.conf
+++ b/tmux.conf
@@ -13,6 +13,9 @@ set-window-option -g mode-keys vi
 # mouse use
 set -g mouse on
 
+# improve selection (items will be only valid within " ". ex: @ is a separator)
+set -g word-separators " @!\"#$%&'()*,:;<=>?[]^{|}"
+
 set -g default-terminal "screen-256color"
 
 # Set the base index for panes, windows to 1 instead of 0
@@ -22,8 +25,8 @@ set -g base-index 1
 # Plugin ------------------------------------------------------------------------
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
-#set -g @plugin 'dracula/tmux'
-set -g @plugin 'junhonglee89/tmux-dracula'
+set -g @plugin 'dracula/tmux'
+#set -g @plugin 'junhonglee89/tmux-dracula' #Not working in m4 Macbook pro..
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 
 # key binding -------------------------------------------------------------------
@@ -46,6 +49,9 @@ bind -Tcopy-mode WheelUpPane send -N1 -X scroll-up
 bind -Tcopy-mode WheelDownPane send -N1 -X scroll-down
 bind-key -T copy-mode-vi WheelUpPane send -N1 -X scroll-up
 bind-key -T copy-mode-vi WheelDownPane send -N1 -X scroll-down
+# Enable to use home/end key
+#bind-key -n End send-key C-e
+#bind-key -n Home send-key C-a
 
 # Dracular theme configuration --------------------------------------------------
 set -g @dracula-show-network false
